# redirects-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/redirects_cli/: __init__.py  __main__.py  cli.py
tests/: test_version.py
